--- a/notes/h264.md
+++ b/notes/h264.md
@@ -18,23 +18,23 @@
 
 > H.264 多个图像组成一个视频系列（GOP）,`例如1个10s的 ts 分片,包含 250帧`，每个图像由一帧（Frame）组成。帧又可以分成`一个或几个片（Slice）`。片由宏块（Macro Block）组成，一帧中每个片的宏块数不一定相同。每个宏块由一个 16×16 的亮度数组和两个 8×8 的色差数组组成。一个 720×480 分辨率的图像可以被划分为 1350（45×30）个宏块。
 
-![](./img/h264_3.png)
+![](./_img/h264_3.png)
 
 > 宏块是编码处理的基本单元。一个帧是可以分割成一个或多个片来编码的，构成 I_Slice、P_Slice、B_Slice、SP_Slice 和 SI_Slice，而一个片编码之后被打包进一个 NAL unit。编码片相互间独立，这样做的目的是为了限制误码的扩散和传输。
 
 Nal unit 由[Nal start code(0x001 或 0x0001)][nal header][payload] 组成。 header 中 有 nal_unit_type 标记(字节后 5 位) 代表了此 unit 的类型.
 
-![](./img/h264_2.png)
+![](./_img/h264_2.png)
 
 主要的 Nal unit 类型:
 
-![](./img/h264_1.png)
+![](./_img/h264_1.png)
 
 5: IDR 帧,即 I 帧,但是 I 帧不一定是 IDR 帧 (例如 nalType = 1,slideType = 2 的 I slide 也代表 I 帧),IDR 帧是强制刷新帧，在解码过程中，当出现了 IDR 帧时，要更新 sps、pps，原因是防止前面 I 帧错误，导致 sps，pps 参考 I 帧导致无法纠正。一般在一个 ts 分片开始的第一个图片帧就是 IDR 帧。
 
 1: 代表切片,I slice、B slice、P slice、SP slice、SI slice
 
-![](./img/h264_4.png)
+![](./_img/h264_4.png)
 
 6: SEI ,附加增强信息,例如存储 文字信息 [https://zhuanlan.zhihu.com/p/33720871]
 
@@ -62,11 +62,11 @@ Nal unit 由[Nal start code(0x001 或 0x0001)][nal header][payload] 组成。 he
 
 不同 Profile 使用的 h264 编码特性集
 
-![](./img/h264_6.png)
+![](./_img/h264_6.png)
 
 完整的 Profile 列表:
 
-![](./img/h264_5.png)
+![](./_img/h264_5.png)
 
 #### Level
 
@@ -74,7 +74,7 @@ Nal unit 由[Nal start code(0x001 或 0x0001)][nal header][payload] 组成。 he
 
 每一种 level 指定如下限制的具体值:
 
-![](./img/h264_7.png)
+![](./_img/h264_7.png)
 
 ### AAC
 
