--- a/notes/h264.md
+++ b/notes/h264.md
@@ -18,23 +18,23 @@
 
 > H.264 多个图像组成一个视频系列（GOP）,`例如1个10s的 ts 分片,包含 250帧`，每个图像由一帧（Frame）组成。帧又可以分成`一个或几个片（Slice）`。片由宏块（Macro Block）组成，一帧中每个片的宏块数不一定相同。每个宏块由一个 16×16 的亮度数组和两个 8×8 的色差数组组成。一个 720×480 分辨率的图像可以被划分为 1350（45×30）个宏块。
 
-![](./_img/h264_3.png)
+![](https://cdn.jsdelivr.net/npm/vod_img@latest/libs/h264_3.png)
 
 > 宏块是编码处理的基本单元。一个帧是可以分割成一个或多个片来编码的，构成 I_Slice、P_Slice、B_Slice、SP_Slice 和 SI_Slice，而一个片编码之后被打包进一个 NAL unit。编码片相互间独立，这样做的目的是为了限制误码的扩散和传输。
 
 Nal unit 由[Nal start code(0x001 或 0x0001)][nal header][payload] 组成。 header 中 有 nal_unit_type 标记(字节后 5 位) 代表了此 unit 的类型.
 
-![](./_img/h264_2.png)
+![](https://cdn.jsdelivr.net/npm/vod_img@latest/libs/h264_2.png)
 
 主要的 Nal unit 类型:
 
-![](./_img/h264_1.png)
+![](https://cdn.jsdelivr.net/npm/vod_img@latest/libs/h264_1.png)
 
 5: IDR 帧,即 I 帧,但是 I 帧不一定是 IDR 帧 (例如 nalType = 1,slideType = 2 的 I slide 也代表 I 帧),IDR 帧是强制刷新帧，在解码过程中，当出现了 IDR 帧时，要更新 sps、pps，原因是防止前面 I 帧错误，导致 sps，pps 参考 I 帧导致无法纠正。一般在一个 ts 分片开始的第一个图片帧就是 IDR 帧。
 
 1: 代表切片,I slice、B slice、P slice、SP slice、SI slice
 
-![](./_img/h264_4.png)
+![](https://cdn.jsdelivr.net/npm/vod_img@latest/libs/h264_4.png)
 
 6: SEI ,附加增强信息,例如存储 文字信息 [https://zhuanlan.zhihu.com/p/33720871]
 
@@ -62,11 +62,11 @@ Nal unit 由[Nal start code(0x001 或 0x0001)][nal header][payload] 组成。 he
 
 不同 Profile 使用的 h264 编码特性集
 
-![](./_img/h264_6.png)
+![](https://cdn.jsdelivr.net/npm/vod_img@latest/libs/h264_6.png)
 
 完整的 Profile 列表:
 
-![](./_img/h264_5.png)
+![](https://cdn.jsdelivr.net/npm/vod_img@latest/libs/h264_5.png)
 
 #### Level
 
@@ -74,7 +74,31 @@ Nal unit 由[Nal start code(0x001 或 0x0001)][nal header][payload] 组成。 he
 
 每一种 level 指定如下限制的具体值:
 
-![](./_img/h264_7.png)
+![](https://cdn.jsdelivr.net/npm/vod_img@latest/libs/h264_7.png)
+
+leve1 对应数值:10
+
+level1.1 = 11
+
+level1.2 = 12
+
+level2 = 20
+
+leve5.1 = 51
+
+...
+
+`video/mp4; codecs="avc1.42E01E"`
+
+0x42 = 66
+
+0xE0 = (11100000)(2 进制) // 代表编码级别的约束条件,目前有 constraint_set0_flag -
+
+constraint_set5_flag
+
+0x1E = 30
+
+则表示: 采用 h265 baseline 编码能力、3.0 level
 
 ### AAC
 
@@ -120,6 +144,14 @@ ADTS header
 音频一帧的时长计算:
 
 1 帧 = 1024 采样,对于采样率为 44.1Khz 的音频, 1 帧 = 1024 \* (90K / 44.1K) ≈ 2089.8 (timestamp) = 23.2 (ms)
+
+`video/mp4; codecs="mp4a.40.2"`
+
+mp4a.40 表示 MPEG-4 audio
+
+2 表示 采用的音频压缩 profile LC
+
+则表示采用 AAC LC
 
 > 对 ts 流的解析,最终是要从 PES 中提取音视频的采样数据,然后将这些采样数据重新塞到 浏览器可直接识别的 MP4 封装格式中. 参见下篇 [mp4](./mp4.md)
 
